src/libs/yuni/nany/tests/valid/empty_main.ny

program Test;

function main
{
	0
}
