src/libs/yuni/nany/tests/invalid/missing_bracket2.ny
program missingBracket;

function foo
{
	if true then
	{
		doSomething;
	}
	else
	{
}

